--- a/indexI1.html
+++ b/indexI1.html
@@ -21,5 +21,5 @@
     <span data-function="testMe">Rick</span>
     <span data-function="testMe">Morty</span>
   </body>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="scriptI1.js"></script>
 </html>
